Revert 2025 changes